--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,13 @@
     <table>
       <tr>
         <td>
-          <h1>NLC Demo</h1>
+          <h1>Product Classification NLC Demo</h1>
         </td>
       </tr>
       <tr>
           <td>
             <p>NLC Configuration: </p>
-            <textarea rows="8" cols="110"> {{ classifier_info }} </textarea>
+            <textarea rows="8" cols="96"> {{ classifier_info }} </textarea>
             <br>
           </td>
         </tr>  
@@ -31,8 +31,8 @@
       </tr>
       <tr>
         <td>
-          <p> Input for Watson NLC classifier: </p>
-          <textarea rows="5" cols="110"> {{ classifier_input }} </textarea>
+          <p> Input for Watson Natural Language Classifier: </p>
+          <textarea rows="5" cols="96"> {{ classifier_input }} </textarea>
             
             <p> </p>
             {{ all_results }}
