Updated demo description
Just proof over my changes since I'm not a web developer. But making this pull request in hopes that it will be easier

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
         </a>
         </li>
         <li class="base--li heading-nav--li" role="presentation">
-          <a class="heading-nav--item" href="http://www.ibm.com/watson/developercloud/starter-kits.html" role="menuitem">
-          Starter Kits
+          <a class="heading-nav--item" href="https://console.bluemix.net/docs/services/natural-language-classifier/sample-applications.html#sample-apps" role="menuitem">
+          More Sample Apps
         </a>
         </li>
         <li class="base--li heading-nav--li" role="presentation">
@@ -50,10 +50,10 @@
       </div>
       <div class="banner--service-info">
         <h1 class="banner--service-title base--h1">
-          <img class="banner--service-icon_INLINE" src="static/images/service-icon.png" alt="Natural Language Classifier API Icon"> Natural Language Classifier
+          <img class="banner--service-icon_INLINE" src="static/images/service-icon.png" alt="Natural Language Classifier API Icon"> Watson Natural Language Classifier
         </h1>
         <div class="banner--service-description">
-          Interpret unstructured natural language and classify it with confidence.
+          For demonstration purposes, the app accepts both raw text descriptions as well as product URLs offered by Kohl's, the application extracts the product description and sends it through Watson. Kohl's was chosen because the nature of products are similar to products on Flipkart and JCPenny, which were used in training. Although the products themselves are similar, there are many nuanced differences in word choice and usage. Watson's ability to understand and analyze the meanings of words, as opposed to simply memorizing them, is what sets its capabilities apart from other machine learning tools. The data set we will be using consists of a cleaned flipkart and JCPenny datasets made available through Kaggle. The dataset contains product descriptions and category labels.
         </div>
         <div class="banner--service-resource">
           <strong>Resources:</strong>
@@ -85,7 +85,7 @@
       <tr>
           <td>
             <p> </p>              
-            <p>NLC Configuration: </p>
+            <p>Natural Language Classifier Configuration: </p>
             {{ classifier_info }} 
             <br>
           </td>
